--- a/templates/feed_templates/trending.html
+++ b/templates/feed_templates/trending.html
@@ -1,23 +1,196 @@
-{% extends base.html %}
-{% load static %}
+{% extends 'feed_templates/base.html' %}
+{% load staticfiles %}
 
-<html>
-    <head>
-        <title> 
-            {% block title_block %}
-                - trending
-            {% endblock %}
-        </title>
-    </head>
-    <body>
-        {% block body_block %}
-            Trendy text
-        {% endblock %}
-        
-        {% if user.is_authenticated %}
-            
-        {% else %}
-            
-        {% endif %}
-    </body>
-</html>
+
+{% block title_block %}
+    Home
+{% endblock %}
+
+
+{% block body_block %}
+<link rel="stylesheet" href="/static/css/home.css" type="text/css">
+<div class="rowLine"></div>
+<div id="cat">
+    <a href="" class="otherButton" style="background-color: #FF5733; border-color: #FF5733;">Home</a>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
+    <a href="" class="otherButton" style="background-color: #00BAAD; border-color: #00BAAD;">Craft</a>
+    <a href="" class="otherButton" style="background-color: #EDD70E; border-color: #EDD70E;">DIY</a>
+    <a href="" class="otherButton" style="background-color: #E3B5FF; border-color: #E3B5FF;">Food</a>
+    <a href="" class="otherButton" style="background-color: #FF5733; border-color: #FF5733;">Trending</a>
+    <a href="" id="homeButton">
+        Trending
+        <div id="buttonUnderline"></div>
+    </a>
+</div>
+<div id="choose">
+    <select id="chooseButton">
+        <option value="Popular">Popular</option>
+        <option value="New">New</option>
+    </select>
+    <div style="border-left: 200px solid #ffffff;"></div>
+</div>
+<div id="postPics">
+    <div class="picLine">
+        <div class="pic" style="height: 600px;">
+            <a href=""><img class="image" src="{{ MEDIA_URL }}samplePic1.png"
+                    alt="samplePic1" /></a>
+            <div class="allPicOpera">
+                <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                        src="{{ MEDIA_URL }}profile.png" alt="profile" />
+                    <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                            alt="followPic" /></div>
+                </a>
+                <a href="" class="authorName">name</a>
+                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                        alt="chat-bubble-dots" /></a>
+                <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
+                <a href=""><img src="{% static 'images/download.png' %}"
+                        alt="download" /></a>
+            </div>
+        </div>
+        <div class="pic" style="height: 450px;">
+            <a href=""><img class="image" src="{{ MEDIA_URL }}samplePic2.png"
+                    alt="samplePic2" /></a>
+             <div class="allPicOpera">
+                <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                        src="{{ MEDIA_URL }}profile.png" alt="profile" />
+                    <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                            alt="followPic" /></div>
+                </a>
+                <a href="" class="authorName">name</a>
+                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                        alt="chat-bubble-dots" /></a>
+                <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
+                <a href=""><img src="{% static 'images/download.png' %}"
+                        alt="download" /></a>
+            </div>
+        </div>
+        <div class="pic" style="height: 300px;">
+            <a href=""><img class="image" src="{{ MEDIA_URL }}samplePic3.png"
+                    alt="samplePic3" /></a>
+             <div class="allPicOpera">
+                <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                        src="{{ MEDIA_URL }}profile.png" alt="profile" />
+                    <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                            alt="followPic" /></div>
+                </a>
+                <a href="" class="authorName">name</a>
+                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                        alt="chat-bubble-dots" /></a>
+                <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
+                <a href=""><img src="{% static 'images/download.png' %}"
+                        alt="download" /></a>
+            </div>
+        </div>
+    </div>
+    <div class="picLine">
+        <div class="pic" style="height: 200px;">
+            <a href=""><img class="image" src="{{ MEDIA_URL }}samplePic4.png"
+                    alt="samplePic4" /></a>
+             <div class="allPicOpera">
+                <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                        src="{{ MEDIA_URL }}profile.png" alt="profile" />
+                    <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                            alt="followPic" /></div>
+                </a>
+                <a href="" class="authorName">name</a>
+                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                        alt="chat-bubble-dots" /></a>
+                <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
+                <a href=""><img src="{% static 'images/download.png' %}"
+                        alt="download" /></a>
+            </div>
+        </div>
+        <div class="pic" style="height: 700px;">
+            <a href=""><img class="image" src="{{ MEDIA_URL }}samplePic5.png"
+                    alt="samplePic5" /></a>
+             <div class="allPicOpera">
+                <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                        src="{{ MEDIA_URL }}profile.png" alt="profile" />
+                    <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                            alt="followPic" /></div>
+                </a>
+                <a href="" class="authorName">name</a>
+                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                        alt="chat-bubble-dots" /></a>
+                <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
+                <a href=""><img src="{% static 'images/download.png' %}"
+                        alt="download" /></a>
+            </div>
+        </div>
+        <div class="pic" style="height: 450px;">
+            <a href=""><img class="image" src="{{ MEDIA_URL }}samplePic6.png"
+                    alt="samplePic6" /></a>
+             <div class="allPicOpera">
+                <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                        src="{{ MEDIA_URL }}profile.png" alt="profile" />
+                    <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                            alt="followPic" /></div>
+                </a>
+                <a href="" class="authorName">name</a>
+                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                        alt="chat-bubble-dots" /></a>
+                <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
+                <a href=""><img src="{% static 'images/download.png' %}"
+                        alt="download" /></a>
+            </div>
+        </div>
+    </div>
+    <div class="picLine">
+        <div class="pic" style="height: 620px;">
+            <a href=""><img class="image" src="{{ MEDIA_URL }}samplePic7.png"
+                    alt="samplePic7" /></a>
+             <div class="allPicOpera">
+                <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                        src="{{ MEDIA_URL }}profile.png" alt="profile" />
+                    <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                            alt="followPic" /></div>
+                </a>
+                <a href="" class="authorName">name</a>
+                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                        alt="chat-bubble-dots" /></a>
+                <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
+                <a href=""><img src="{% static 'images/download.png' %}"
+                        alt="download" /></a>
+            </div>
+        </div>
+        <div class="pic" style="height: 760px;">
+            <a href=""><img class="image" src="{{ MEDIA_URL }}samplePic8.png"
+                    alt="samplePic8" /></a>
+             <div class="allPicOpera">
+                <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                        src="{{ MEDIA_URL }}profile.png" alt="profile" />
+                    <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                            alt="followPic" /></div>
+                </a>
+                <a href="" class="authorName">name</a>
+                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                        alt="chat-bubble-dots" /></a>
+                <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
+                <a href=""><img src="{% static 'images/download.png' %}"
+                        alt="download" /></a>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="paging">
+    <span>Previous</span>
+    <a href="">1</a>
+    <a href="">2</a>
+    <a href="">3</a>
+    <a href="">4</a>
+    <a href="">5</a>
+    <span>Next</span>
+</div>
+<br><br>
+{% endblock %}
