--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,16 +1,84 @@
-{% extends 'feed_templates/base.html' %}
+<!DOCTYPE html>
 
-{% block title_block %}
-{% endblock %}
+{% load static %}
 
-{% block body_block %}
-<!-- Change the contents of this block at will, this is just a mock -->
 
-    {% csrf_token %}
-    {{ user_form.as_p }}
-    <label for="re_psw">Repeat your password: </label>
-    <input type="password" name="re_psw" placeholder="Re-enter your password">
-    <button type="submit" name="Submit" on_click=>Submit</button>
-{% endblock %}
+<html>
 
-<script></script>
+<head>
+    <meta charset="UTF-8">
+    <title>
+        Register
+    </title>
+    <link rel="stylesheet" href="/static/css/register.css" type="text/css">
+
+</head>
+
+<body>
+    <div id="page">
+        <header>
+            <div id="topStrip">
+                <a href="" id="logo">
+                    <img src="{% static 'images/logowhite.png' %}" alt="logo" />
+                </a>
+                <div id="login_signup">
+                    <a href="" class="tipText">Already?</a>
+                    <a href="" class="lsText">&nbspLog in</a>
+                </div>
+            </div>
+        </header>
+
+        <div id="signBorder">
+            <div id="signFrame">
+                <span>Join us!</span>
+                {% csrf_token %}
+                {{ user_form.as_p }}
+                <div id="nameFrame">
+                    <div id="name1">
+                        <form id="firstName" action="">
+                            <input type="text" name="firstName" value="First Name" onfocus="this.value=''"
+                                onblur="if(this.value==''){this.value='First Name'}">
+                        </form>
+                    </div>
+                    <div id="name2">
+                        <form id="lastName" action="">
+                            <input type="text" name="lastName" value="Last Name" onfocus="this.value=''"
+                                onblur="if(this.value==''){this.value='Last Name'}">
+                        </form>
+                    </div>
+                </div>
+                <div id="regisEmailFrame">
+                    <form id="regisEmailText" action="">
+                        <input type="text" name="regisEmailText" value="Email" onfocus="this.value=''"
+                            onblur="if(this.value==''){this.value='Email'}">
+                    </form>
+                </div>
+                <div id="PasswordFrame">
+                    <form id="PasswordText" action="">
+                        <input type="text" name="PasswordText" value="Password" onfocus="this.value=''"
+                            onblur="if(this.value==''){this.value='Password'}">
+                    </form>
+                </div>
+                <a href="" id="loginButton"><span>Create</span></a>
+            </div>
+        </div>
+
+        <div class="rowLine"></div>
+        <div id="bottom">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
+            <a href="" class="helpInfo">About</a>
+            <a href="" class="helpInfo">Help</a>
+            <a href="" class="helpInfo">Contact us</a>
+        </div>
+        <div id="copyright">Copyright © 2022 Team 9D. All rights reserved.</div>
+    </div>
+</body>
+
+<!-- JS goes here if needed-->
+<script>
+
+</script>
+
+</html>
