--- a/templates/feed_templates/bootstrap-base.html
+++ b/templates/feed_templates/bootstrap-base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.5">
-    <link rel="icon" href="{% static 'images/favicon.ico' %}">
+    <link rel="icon" href="{% static 'images/logo.png' %}">
     <title>
         Rango - {% block title_block %}DiTry{% endblock %}
     </title>
