changes made to some html files, allows for dynamic displaying of username, will edit more later

--- a/templates/feed_templates/trending.html
+++ b/templates/feed_templates/trending.html
@@ -42,7 +42,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -60,7 +60,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -78,7 +78,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -98,7 +98,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -116,7 +116,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -134,7 +134,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -154,7 +154,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -172,7 +172,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
