--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -68,9 +68,9 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
-            <a href="" class="helpInfo">About</a>
-            <a href="" class="helpInfo">Help</a>
-            <a href="" class="helpInfo">Contact us</a>
+            <a href="{% url 'about' %}" class="helpInfo">About</a>
+            <a href="{% url 'help' %}" class="helpInfo">Help</a>
+            <a href="{% url 'contact' %}" class="helpInfo">Contact us</a>
         </div>
         <div id="copyright">Copyright © 2022 Team 9D. All rights reserved.</div>
     </div>
