--- a/templates/feed_templates/food.html
+++ b/templates/feed_templates/food.html
@@ -41,7 +41,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -59,7 +59,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -77,7 +77,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -97,7 +97,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -115,7 +115,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -133,7 +133,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -153,7 +153,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -171,7 +171,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
