--- a/templates/feed_templates/home.html
+++ b/templates/feed_templates/home.html
@@ -44,7 +44,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -62,7 +62,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -80,7 +80,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -100,7 +100,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -118,7 +118,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -136,7 +136,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -156,7 +156,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
@@ -174,7 +174,7 @@
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
                 </a>
-                <a href="" class="authorName">name</a>
+                <a href="" class="authorName">{{ post.creator.username }}</a>
                 <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
