--- a/templates/feed_templates/personalPage.html
+++ b/templates/feed_templates/personalPage.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    personal page
+    Your page
 {% endblock %}
 
 {% block body_block %}
@@ -12,8 +12,8 @@
     <div id="author">
         <a href=""><img id="authorProfile" src="{{ MEDIA_URL }}profile.png" alt="authorProfile" /></a>
         <div id="authorDetail">
-            <a href="" id="name">Name</a>
-            <div id="following">66 following</div>
+            <a href="" id="name">{{ user }}</a>
+            <div id="following">{{ }}</div>
             <div id="location">
                 <a><img src="{% static 'images/location.png' %}" alt="location" /></a>
                 <a id="locationText">Location</a>
