add linkable to following/followers on personal page

--- a/templates/feed_templates/personalPage.html
+++ b/templates/feed_templates/personalPage.html
@@ -14,8 +14,8 @@
         <div id="authorDetail">
             <a href="" id="name">Name</a>
             <div id="followFrame">
-                <div class="follow">66 following</div>
-                <div class="follow">23 followers</div>
+                <div class="follow"><a href>66 following</a></div>
+                <div class="follow"><a href>23 followers</a></div>
             </div>
             <div id="location">
                 <a><img src="{% static 'images/location.png' %}" alt="location" /></a>
