--- a/static/css/personalPage.css
+++ b/static/css/personalPage.css
@@ -42,6 +42,14 @@
     border-bottom: 5px solid #ffffff;
 }
 
+#page  #frame  #author #authorDetail #followFrame .follow a{
+    text-decoration: none;
+    color: #000000;
+}
+
+#page  #frame  #author #authorDetail #followFrame .follow a:hover{
+    color: #4F81FF;
+}
 
 #page  #frame  #author #authorDetail #location{
     display: flex;
