--- a/templates/feed_templates/base.html
+++ b/templates/feed_templates/base.html
@@ -55,9 +55,9 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
-            <a href="{% url 'feed_templates/about' %}" class="helpInfo">About</a>
-            <a href="{% url 'feed_templates/help' %}" class="helpInfo">Help</a>
-            <a href="{% url 'feed_templates/contact' %}" class="helpInfo">Contact us</a>
+            <a href="{% url 'feed_templates:about' %}" class="helpInfo">About</a>
+            <a href="{% url 'feed_templates:help' %}" class="helpInfo">Help</a>
+            <a href="{% url 'feed_templates:contact-us' %}" class="helpInfo">Contact us</a>
         </div>
         <div id="copyright">Copyright © 2022 Team 9D. All rights reserved.</div>
     </div>
