add browser label icon

--- a/templates/feed_templates/base.html
+++ b/templates/feed_templates/base.html
@@ -12,7 +12,7 @@
         {% endblock %}
     </title>
     <link rel="stylesheet" href="/static/css/base.css" type="text/css">
-
+    <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
