--- a/templates/feed_templates/login.html
+++ b/templates/feed_templates/login.html
@@ -18,12 +18,12 @@
     <div id="page">
         <header>
             <div id="topStrip">
-                <a href="" id="logo">
+                <a href="{% url 'feed_templates:home' %}" id="logo">
                     <img src="{% static 'images/logowhite.png' %}" alt="logo" />
                 </a>
                 <div id="login_signup">
                     <a href="" class="tipText">New user?</a>
-                    <a href="" class="lsText">&nbspSign up</a>
+                    <a href= "{% url 'feed_templates:register' %}" class="lsText">&nbspSign up</a>
                 </div>
             </div>
         </header>
@@ -45,6 +45,10 @@
                             onblur="if(this.value==''){this.value='Password'}">
                     </form>
                 </div>
+<!--                need a style for error message-->
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
                 <a href="" id="loginButton"><span>Log in</span></a>
                 <a href="" id="forgetpw">Forget passwords?</a>
             </div>
@@ -55,9 +59,9 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
-            <a href="{% url 'about' %}" class="helpInfo">About</a>
-            <a href="{% url 'help' %}" class="helpInfo">Help</a>
-            <a href="{% url 'contact' %}" class="helpInfo">Contact us</a>
+            <a href="{% url 'feed_templates:about' %}" class="helpInfo">About</a>
+            <a href="{% url 'feed_templates:help' %}" class="helpInfo">Help</a>
+            <a href="{% url 'feed_templates:contact_us' %}" class="helpInfo">Contact us</a>
         </div>
         <div id="copyright">Copyright © 2022 Team 9D. All rights reserved.</div>
     </div>
