--- a/templates/feed_templates/home.html
+++ b/templates/feed_templates/home.html
@@ -45,7 +45,11 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+				
+				
+                <a href=""><img class="heartButton" id="sampleHeart1" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+				
+				
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
